# iMPC

./: CMakeLists.txt  iMpc.kdev4
include/iMpc/: Constants.h  Constraint.h  Cost.h  Loader.h  Model.h
